Fixed: Attachments not working in PM correctly. Fixed: Attachments field being too wide for IE and causing wrapping of text next to it. Added: User's can now alter the nicknames of other user's they've added to the relationships list. (WIP, probably missed loads) Changed: admin_forums,php width added to main table to prevent it looking bunched up. Changed: Shrunk logon form slightly to make it look less gash.

--- a/forum/styles/apple/style.css
+++ b/forum/styles/apple/style.css
@@ -762,7 +762,7 @@ a {
 }
 
 .logon_dropdown {
-    width: 135px;
+    width: 100px;
 }
 
 .search_dropdown {
